@@ -43,5 +43,3 @@ clean-local:
 	fi
 #	-rm tuxmath-@VERSION@-win32-installer.exe
 
-macapp:
-	cd src && $(MAKE) $(AM_MAKEFLAGS) bundle && $(MAKE) $(AM_MAKEFLAGS) bundle-fw && $(MAKE) $(AM_MAKEFLAGS) bundle-libs && $(MAKE) $(AM_MAKEFLAGS) bundle-dmg
